--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
       <div id="bg"></div>
       <div class="content">
         <header>
-          <h2 id="text3">Cậu yêu tớ có phải không nào ._.</h2>
+          <h2 id="text3">Em yêu Anh có phải không nào ._.</h2>
           <h4 id="text4">
-            Nếu cậu ko trả lời mà thoát ra tức là muốn làm vợ tớ rùi đó nha :v
+            Nếu Em không trả lời mà thoát ra tức là muốn làm vợ Anh rùi đó nha :3
           </h4>
         </header>
         <button id="yes" type="button" class="btn btn-danger btn-lg">
           Yêu ơi là yêuuuuuu <333
         </button>
         <button id="no" type="button" class="btn btn-info btn-lg">
-          Cậu mơ à :333
+          Không, Anh mơ à 🙄
         </button>
       </div>
     </div>
